--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UntrefSchool</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/master.css">
 </head>
 <body>
-    <div class="container" id="container">
-        <header id="encabezado">
+    <div class="container-fluid" id="container">
+        <!-- <header id="encabezado">
             <figure id="logo">
                 <img src="./img/untref.jpg" alt="">
             </figure>
@@ -22,6 +23,45 @@
                     </ul>
                 </nav>
             </div>
+        </header> -->
+        <header>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">UNTREF</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">¿Por que Elegirnos?</a>
+                      </li>
+                      
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          ¿Quienes Somos?
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Historia</a></li>
+                          <li><a class="dropdown-item" href="#">Misión</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Visión</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link ">Propuesta Educativa</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link ">Contacto</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+                      <button class="btn btn-outline-primary" type="submit">Buscar</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
         </header>
         <section id="imagenFondo">
             <img src="./img/banner.webp" alt="Banner">
@@ -29,23 +69,23 @@
         <h1>Universidad Nacional Tres de Febrero</h1>
         <section id="productos">
             <article class="producto">
-                <img src="./img/sel.webp" alt="Sel">
+                <img src="./img/quienes_somos.jpg" alt="Quienes somos">
                 <h2>Quienes Somos</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia ullam labore iusto libero quisquam expedita atque hic nesciunt excepturi quasi.</p>
                 <button>Ver detalle</button>
             </article>
             <article class="producto">
-                <img src="./img/titanium.webp" alt="Titanium">
+                <img src="./img/por_que_elegirnos.jpg" alt="Titanium">
                 <h2>¿Por que Elegirnos?</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia ullam labore iusto libero quisquam expedita atque hic nesciunt excepturi quasi.</p>
                 <button>Ver detalle</button>
             </article>
         </section>
         <section id="publicidad">
-            <img src="./img/tablero-publicidad.jpg" alt="Tablero">
+            <img src="./img/tablero.jpg" alt="Tablero">
         </section>
         <h2>Propuesta Educativa</h2>
-        <section id="galeria">
+        <!-- <section id="galeria">
             <article>
                 <img src="./img/galeria1.webp" alt="Galería">
             </article>
@@ -70,6 +110,49 @@
             <article>
                 <img src="./img/galeria8.webp" alt="Galería">
             </article>
+        </section> -->
+        <section class="row">
+            <article class="col-12 col-md-12 col-lg-6">
+                <div class="card" >
+                    <img src="./img/metodologia_enseñanza.jpg" class="card-img-top" alt="Metodologia de la Enseñanza">
+                    <div class="card-body">
+                      <h5 class="card-title">Metodologia de la Enseñanza</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="boton">Mas detalle</a>
+                    </div>
+                  </div>
+            </article>
+            <article class="col-12 col-md-12 col-lg-6">
+                <div class="card" >
+                    <img src="./img/ingenieria.jpg" class="card-img-top" alt="Ingeniería">
+                    <div class="card-body">
+                      <h5 class="card-title">Ingeniería</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="boton">Ver detalle</a>
+                    </div>
+                  </div>
+            </article>
+            <article class="col-12 col-md-12 col-lg-6">
+                <div class="card" >
+                    <img src="./img/historia.jpg" class="card-img-top" alt="Historia">
+                    <div class="card-body">
+                      <h5 class="card-title">Historia</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="boton">Mas detalle</a>
+                    </div>
+                  </div>
+            </article>
+            <article class="col-12 col-md-12 col-lg-6">
+                <div class="card" >
+                    <img src="./img/technology.jpg" class="card-img-top" alt="Tecnologias">
+                    <div class="card-body">
+                      <h5 class="card-title">Tecnologias</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="boton">Ver detalle</a>
+                    </div>
+                  </div>
+            </article>
+
         </section>
         <footer id="piePagina">
             <div id="direccion">
@@ -97,5 +180,6 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <!--Esta es mi cuenta - obten la tuya-->
     <script src="https://kit.fontawesome.com/7968cc1663.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
