--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-fluid" id="container">
-        <!-- <header id="encabezado">
+        <header id="encabezado">
             <figure id="logo">
                 <img src="./img/untref.jpg" alt="">
             </figure>
@@ -23,63 +23,100 @@
                     </ul>
                 </nav>
             </div>
-        </header> -->
-        <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">UNTREF</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">¿Por que Elegirnos?</a>
-                      </li>
-                      
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          ¿Quienes Somos?
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Historia</a></li>
-                          <li><a class="dropdown-item" href="#">Misión</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Visión</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link ">Propuesta Educativa</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link ">Contacto</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-                      <button class="btn btn-outline-primary" type="submit">Buscar</button>
-                    </form>
-                  </div>
-                </div>
-              </nav>
-        </header>
-        <section id="imagenFondo">
-            <img src="./img/banner.webp" alt="Banner">
-        </section>
-        <h1>Universidad Nacional Tres de Febrero</h1>
+        </header> 
+
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./img/carrusel1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/crrusel2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carrusel3.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <!--<section id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./img/carrusel1.jpg" class="d-block w-100" alt="Imagen">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/crrusel2.jpg" class="d-block w-100" alt="Imagen">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carrusel3.jpg" class="d-block w-100" alt="Imagen">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </section>-->
+        <!-- <section id="imagenFondo">
+            <img src="./img/encabezado-de-banner-concepto-trayectoria-educativa-graduación-la-escuela-promoción-carrera-para-el-logro-los-objetivos-182535570.webp" alt="Banner">
+        </section> -->
+        <h1>Universidad Nacional Tres de Febrero School</h1>
         <section id="productos">
-            <article class="producto">
-                <img src="./img/quienes_somos.jpg" alt="Quienes somos">
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-5">
+                <img src="./img/quienes_somos.jpeg" class="img-fluid rounded-start" alt="quienes somos">
+              </div>
+              <div class="col-md-7">
+                <div class="card-body">
+                  <h5 class="card-title">Quienes Somos</h5>
+                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores tempore quaerat quidem aut harum eligendi explicabo porro expedita saepe ex obcaecati, minus in sed tenetur doloribus quam quae accusamus ipsam.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="..." class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+            <!--<article class="producto">
+                <img src="./img/quienes_somos.jpeg" alt="Quienes somos">
                 <h2>Quienes Somos</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia ullam labore iusto libero quisquam expedita atque hic nesciunt excepturi quasi.</p>
                 <button>Ver detalle</button>
             </article>
             <article class="producto">
-                <img src="./img/por_que_elegirnos.jpg" alt="Titanium">
+                <img src="./img/por_que_elegirnos.jpg" alt="Elecciones">
                 <h2>¿Por que Elegirnos?</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia ullam labore iusto libero quisquam expedita atque hic nesciunt excepturi quasi.</p>
                 <button>Ver detalle</button>
-            </article>
+            </article>-->
         </section>
         <section id="publicidad">
             <img src="./img/tablero.jpg" alt="Tablero">
@@ -114,9 +151,9 @@
         <section class="row">
             <article class="col-12 col-md-12 col-lg-6">
                 <div class="card" >
-                    <img src="./img/metodologia_enseñanza.jpg" class="card-img-top" alt="Metodologia de la Enseñanza">
+                    <img src="./img/chicas-gimnasia.jpg" class="card-img-top" alt="gimnasia deportiva">
                     <div class="card-body">
-                      <h5 class="card-title">Metodologia de la Enseñanza</h5>
+                      <h5 class="card-title">Gimnasia Deportiva</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="boton">Mas detalle</a>
                     </div>
@@ -124,19 +161,19 @@
             </article>
             <article class="col-12 col-md-12 col-lg-6">
                 <div class="card" >
-                    <img src="./img/ingenieria.jpg" class="card-img-top" alt="Ingeniería">
+                    <img src="./img/teatro2.webp" class="card-img-top" alt="Teatro">
                     <div class="card-body">
-                      <h5 class="card-title">Ingeniería</h5>
+                      <h5 class="card-title">Teatro</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="boton">Ver detalle</a>
+                      <a href="#" class="boton">Mas detalle</a>
                     </div>
                   </div>
             </article>
             <article class="col-12 col-md-12 col-lg-6">
                 <div class="card" >
-                    <img src="./img/historia.jpg" class="card-img-top" alt="Historia">
+                    <img src="./img/robotica.jpg" class="card-img-top" alt="robotica">
                     <div class="card-body">
-                      <h5 class="card-title">Historia</h5>
+                      <h5 class="card-title">Robotica</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="boton">Mas detalle</a>
                     </div>
@@ -148,7 +185,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Tecnologias</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="boton">Ver detalle</a>
+                      <a href="#" class="boton">Mas detalle</a>
                     </div>
                   </div>
             </article>
