--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
                         <li><a href="#">¿Por que Elegirnos?</a></li>
                         <li><a href="#">Propuesta Educativa</a></li>
                         <li><a href="#piePagina">Ultimas Noticias</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header> 
 
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <!-- <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./img/carrusel1.jpg" class="d-block w-100" alt="...">
@@ -45,7 +46,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
-        </div>
+        </div> -->
 
         <!--<section id="carouselExampleIndicators" class="carousel slide">
           <div class="carousel-indicators">
@@ -73,10 +74,13 @@
             <span class="visually-hidden">Next</span>
           </button>
         </section>-->
-        <!-- <section id="imagenFondo">
-            <img src="./img/encabezado-de-banner-concepto-trayectoria-educativa-graduación-la-escuela-promoción-carrera-para-el-logro-los-objetivos-182535570.webp" alt="Banner">
-        </section> -->
-        <h1>Universidad Nacional Tres de Febrero School</h1>
+        <section id="imagenFondo">
+            <img src="./img/encabezado.jpg" alt="Banner">
+        </section>
+        <div>
+          <h1>Universidad Nacional Tres de Febrero School</h1>
+        </div>
+        
         <section id="productos">
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
@@ -204,7 +208,7 @@
                     <li><a href="https://www.instagram.com" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
                     <li><a href="https://www.facebook.com" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
                     <li><a href="https://www.Linkedin.com" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                    <li><a href="https://www.youtube.com"><i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a></li>
+                    <li><a href="https://www.youtube.com"><i class="fa-brands fa-youtube fa-xl" style="color: #FC7300;"></i></a></li>
                 </ul>
             </div>
             <div id="subir">
