--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/master.css">
 </head>
@@ -16,10 +16,10 @@
             <div id="menu">
                 <nav id="menuIzquierdo">
                     <ul id="opcionesIzquierdo">
-                        <li><a href="#">Quienes Somos</a></li>
-                        <li><a href="#">¿Por que Elegirnos?</a></li>
-                        <li><a href="#">Propuesta Educativa</a></li>
-                        <li><a href="#piePagina">Ultimas Noticias</a></li>
+                        <li><a href="./index.html#productos">Quienes Somos</a></li>
+                        <li><a href="./index.html#productos">¿Por que Elegirnos?</a></li>
+                        <li><a href="./index.html#propuesta">Propuesta Educativa</a></li>
+                        <li><a href="./index.html#noticias">Ultimas Noticias</a></li>
                         <li><a href="./contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -31,7 +31,7 @@
         <div>
             <h1>Dejanos tus Datos</h1>
         </div>
-        <form action="">
+        <!-- <form action="">
             <label>Nombre:</label>
             <br>
             <input class="control" type="text" name="nombre" placeholder="Ingrese su Nombre"/>
@@ -49,8 +49,88 @@
             <input class="control" type="email" name="email" placeholder="Ingrese su e-mail"/>
             <br>
             <input class="boton" type="submit" value="Enviar"/>
-        </form>
-        <a href="./index.html">Volver</a>
+        </form> -->
+
+        <!-- <a href="./index.html">Volver</a> -->
+
+        <section class="row _fondoFormulario">
+            <form class="col-12 col-md-4 m-auto needs-validation _formulario" novalidate>
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" aria-describedby="nameHelp" required
+                        placeholder="Indique su nombre">
+                    <div id="nameHelp" class="form-text valid-feedback">
+                        Todo bien
+                    </div>
+                    <div id="nameHelp" class="form-text invalid-feedback">
+                        El campo nombre no puede estar vacio
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="apellido" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="apellido" aria-describedby="lastNameHelp"
+                        placeholder="Indique su apellido" required>
+                    <div id="lastNameHelp" class="form-text valid-feedback">
+                        Todo bien
+                    </div>
+                    <div id="lastNameHelp" class="form-text invalid-feedback">
+                        El campo apellido no puede estar vacio
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Indique su email ejemplo@gmail.com</div>
+                </div>
+                <div class="mb-3">
+                    <label for="observaciones" class="form-label">Observaciones</label>
+                    <textarea class="form-control" id="observaciones" rows="3"></textarea>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Acepto los terminos y condiciones</label>
+                </div>
+                <div class="mb-3">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop">
+                        Terminos y condiciones
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Terminos y condiciones</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="close"></button>
+                                </div>
+                                <div class="modal-body ">
+                                    <h2>Me comprometo a leer todo</h2>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non reiciendis quod obcaecati delectus sed alias facilis, beatae, placeat quo quia nesciunt dolorem ut architecto tenetur tempore odio ex quam excepturi repellendus, pariatur fugit maxime odit dolore! Eos reiciendis blanditiis perspiciatis doloribus inventore quibusdam sint magnam soluta, velit quas magni rem beatae deleniti? Sint quasi iusto recusandae, eligendi incidunt eaque explicabo dicta animi, soluta quo error officia provident fuga nulla necessitatibus! Quam, obcaecati corrupti, ut neque odit, repellendus iste eius ab facilis rem minima! Optio aperiam iusto similique vel necessitatibus in adipisci laboriosam animi exercitationem dignissimos, quibusdam, totam praesentium distinctio tempore? Eligendi facilis excepturi ratione magnam voluptate, nihil cupiditate ipsam, ullam alias, quae facere quisquam laboriosam voluptates deserunt minus velit doloribus ad eveniet animi totam corrupti nemo cumque! Corrupti blanditiis eligendi, ipsa laboriosam suscipit, corporis recusandae vitae enim hic porro accusamus inventore! Minus quisquam ut numquam repellendus voluptas doloremque eveniet fuga fugiat accusamus. Mollitia saepe aperiam dignissimos eligendi inventore, nesciunt fuga deserunt nisi molestias numquam pariatur cumque dicta ab doloremque repellendus corrupti itaque, nobis quas porro facilis id reiciendis. Quisquam, deserunt hic sapiente, fuga ipsa minus asperiores, aliquid nulla illum alias omnis eveniet. Enim, deleniti pariatur reiciendis ea repudiandae nobis repellendus.</p>
+                                    <h2>Condiciones</h2>
+                                    <ul>
+                                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                    </ul>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Cerrar</button>
+                                    <button type="button" class="btn btn-primary">Ver mas detalle</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </section>
+        
         <footer id="piePagina">
             <div id="direccion">
                 <h3>Argentina</h3>
@@ -82,5 +162,29 @@
     <!--Esta es mi cuenta - obten la tuya-->
     <script src="https://kit.fontawesome.com/7968cc1663.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (() => {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            const forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.from(forms).forEach(form => {
+                form.addEventListener('submit', event => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        })()
+    </script>
 </body>
 </html>
