--- a/index.html
+++ b/index.html
@@ -16,64 +16,17 @@
             <div id="menu">
                 <nav id="menuIzquierdo">
                     <ul id="opcionesIzquierdo">
-                        <li><a href="#">Quienes Somos</a></li>
-                        <li><a href="#">¿Por que Elegirnos?</a></li>
-                        <li><a href="#">Propuesta Educativa</a></li>
-                        <li><a href="#piePagina">Ultimas Noticias</a></li>
+                        <li><a href="#productos">Quienes Somos</a></li>
+                        <li><a href="#productos">¿Por que Elegirnos?</a></li>
+                        <li><a href="#propuesta">Propuesta Educativa</a></li>
+                        <li><a href="#noticias">Ultimas Noticias</a></li>
                         <li><a href="./contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header> 
 
-        <!-- <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./img/carrusel1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="./img/crrusel2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="./img/carrusel3.jpg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div> -->
-
-        <!--<section id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./img/carrusel1.jpg" class="d-block w-100" alt="Imagen">
-            </div>
-            <div class="carousel-item">
-              <img src="./img/crrusel2.jpg" class="d-block w-100" alt="Imagen">
-            </div>
-            <div class="carousel-item">
-              <img src="./img/carrusel3.jpg" class="d-block w-100" alt="Imagen">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </section>-->
+   
         <section id="imagenFondo">
             <img src="./img/encabezado.jpg" alt="Banner">
         </section>
@@ -82,7 +35,7 @@
         </div>
         
         <section id="productos">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-2" style="max-width:max-content;">
             <div class="row g-0">
               <div class="col-md-5">
                 <img src="./img/quienes_somos.jpeg" class="img-fluid rounded-start" alt="quienes somos">
@@ -95,16 +48,15 @@
               </div>
             </div>
           </div>
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-2" style="max-width:max-content;">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img src="..." class="img-fluid rounded-start" alt="...">
+              <div class="col-md-5">
+                <img src="./img/por_que_elegirnos.jpg" class="img-fluid rounded-start" alt="por que elegirnos">
               </div>
-              <div class="col-md-8">
+              <div class="col-md-7">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  <h5 class="card-title">¿Por que Elegirnos</h5>
+                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores tempore quaerat quidem aut harum eligendi explicabo porro expedita saepe ex obcaecati, minus in sed tenetur doloribus quam quae accusamus ipsam.</p>
                 </div>
               </div>
             </div>
@@ -125,7 +77,7 @@
         <section id="publicidad">
             <img src="./img/tablero.jpg" alt="Tablero">
         </section>
-        <h2>Propuesta Educativa</h2>
+        <h2 id="propuesta">Propuesta Educativa</h2>
         <!-- <section id="galeria">
             <article>
                 <img src="./img/galeria1.webp" alt="Galería">
@@ -153,7 +105,7 @@
             </article>
         </section> -->
         <section class="row">
-            <article class="col-12 col-md-12 col-lg-6">
+            <article class="col-12 col-md-8 col-lg-4">
                 <div class="card" >
                     <img src="./img/chicas-gimnasia.jpg" class="card-img-top" alt="gimnasia deportiva">
                     <div class="card-body">
@@ -163,7 +115,7 @@
                     </div>
                   </div>
             </article>
-            <article class="col-12 col-md-12 col-lg-6">
+            <article class="col-12 col-md-8 col-lg-4">
                 <div class="card" >
                     <img src="./img/teatro2.webp" class="card-img-top" alt="Teatro">
                     <div class="card-body">
@@ -173,7 +125,7 @@
                     </div>
                   </div>
             </article>
-            <article class="col-12 col-md-12 col-lg-6">
+            <article class="col-12 col-md-8 col-lg-4">
                 <div class="card" >
                     <img src="./img/robotica.jpg" class="card-img-top" alt="robotica">
                     <div class="card-body">
@@ -183,7 +135,7 @@
                     </div>
                   </div>
             </article>
-            <article class="col-12 col-md-12 col-lg-6">
+            <article class="col-12 col-md-8 col-lg-4">
                 <div class="card" >
                     <img src="./img/technology.jpg" class="card-img-top" alt="Tecnologias">
                     <div class="card-body">
@@ -193,7 +145,47 @@
                     </div>
                   </div>
             </article>
-
+        </section>
+        <h2 id="noticias">Ultimas Noticias</h2>
+        <section class="row">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="./img/noticia1.jpg" class="card-img-top" alt="noticias">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="./img/noticia2.jpg" class="card-img-top" alt="noticias">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="./img/noticia3.jpg" class="card-img-top" alt="noticias">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
         <footer id="piePagina">
             <div id="direccion">
