llegando.... mas cerca del final

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="menu">
                 <nav id="menuIzquierdo">
                     <ul id="opciones">
-                        <li><a href="#productos">Quienes Somos</a></li>
+                        <li><a href="#titulo">Quienes Somos</a></li>
                         <li><a href="#productos">¿Por que Elegirnos?</a></li>
                         <li><a href="#propuesta">Propuesta Educativa</a></li>
                         <li><a href="#noticias">Ultimas Noticias</a></li>
@@ -30,7 +30,7 @@
         <section id="imagenFondo">
             <img src="./img/encabezado.jpg" alt="Banner">
         </section>
-        <div>
+        <div id="titulo">
           <h1>Universidad Nacional Tres de Febrero School</h1>
         </div>
         
