--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
             <div id="menu">
                 <nav id="menuIzquierdo">
                     <ul id="opciones">
-                        <li><a href="./index.html#productos">Quienes Somos</a></li>
+                        <li><a href="./index.html#titulo">Quienes Somos</a></li>
                         <li><a href="./index.html#productos">¿Por que Elegirnos?</a></li>
                         <li><a href="./index.html#propuesta">Propuesta Educativa</a></li>
                         <li><a href="./index.html#noticias">Ultimas Noticias</a></li>
