correccion de links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <nav id="menuIzquierdo">
                     <ul id="opciones">
                         <li><a href="#titulo">Quienes Somos</a></li>
-                        <li><a href="#productos">¿Por que Elegirnos?</a></li>
+                        <li><a href="#elegirnos">¿Por que Elegirnos?</a></li>
                         <li><a href="#propuesta">Propuesta Educativa</a></li>
                         <li><a href="#noticias">Ultimas Noticias</a></li>
                         <li><a href="./contacto.html">Contacto</a></li>
@@ -50,7 +50,7 @@
             </div>
           </div>
           <div class="card mb-2" style="max-width:max-content;">
-            <div class="row g-0">
+            <div class="row g-0" id="elegirnos">
               <div class="col-md-5">
                 <img src="./img/por_que_elegirnos.jpg" class="img-fluid rounded-start" alt="por que elegirnos">
               </div>
