--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
                 <nav id="menuIzquierdo">
                     <ul id="opciones">
                         <li><a href="./index.html#titulo">Quienes Somos</a></li>
-                        <li><a href="./index.html#productos">¿Por que Elegirnos?</a></li>
+                        <li><a href="./index.html#elegirnos">¿Por que Elegirnos?</a></li>
                         <li><a href="./index.html#propuesta">Propuesta Educativa</a></li>
                         <li><a href="./index.html#noticias">Ultimas Noticias</a></li>
                         <li><a href="./contacto.html">Contacto</a></li>
