correccion nav bootstrap

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container-fluid" id="container">
         <header id="encabezado">
-            <figure id="logo">
+            <!-- <figure id="logo">
                 <img src="./img/untref.jpg" alt="">
-            </figure>
+            </figure> -->
             <div id="menu">
-                <nav id="menuIzquierdo">
+                <!-- <nav id="menuIzquierdo">
                     <ul id="opciones">
                         <li><a href="#titulo">Quienes Somos</a></li>
                         <li><a href="#elegirnos">¿Por que Elegirnos?</a></li>
@@ -23,6 +23,34 @@
                         <li><a href="#noticias">Ultimas Noticias</a></li>
                         <li><a href="./contacto.html">Contacto</a></li>
                     </ul>
+                </nav> -->
+                <nav class="navbar navbar-expand-md navbar-dark  fixed-top "style="background-color: #00425A;">
+                  <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+                  <a class="navbar-brand" href="#">
+                    <img src="./img/untref.jpg" width="150" height="100" class="d-inline-block align-top" alt="">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto ms-3">
+                      <li class="nav-item active">
+                        <a class="nav-link link-warning" href="#titulo">Quienes Somos <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link link-warning" href="#elegirnos">¿Por que Elegirnos?</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link link-warning" href="#propuesta">Propuesta Educativa</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link link-warning" href="#noticias">Ultimas Noticias</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link link-warning" href="./contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
                 </nav>
             </div>
         </header> 
